# CompilerPP

./: .gitignore  CMakeLists.txt  Grammar.txt  README.md  TODO  example.cgor  example_compile.cgor  example_non_compile.cgor
example/: Shaper  Shaper.cgor  Tree.cgor  example_compile.cgor  example_non_compile.cgor
include/Parsing/: Ast.hpp  Interpreter.hpp  PrinterAST.hpp
include/Tokenizing/: Tokens.hpp
include/Utils/: Overload.hpp
include/backend/Lowering/: ExecutableLowering.hpp  ObjectFileLowering.hpp
include/frontend/Debug/: Debug.hpp  DebugCtx.hpp  Errors.hpp
include/frontend/Lowering/: ExecutableLowering.hpp  LLVMConstructUtils.hpp  LLVMIRLowering.hpp  ObjectFileLowering.hpp
include/frontend/Parsing/: Ast.hpp  Parser.hpp  Types.hpp
include/frontend/SemanticAnalysis/: AccessAllowanceChecker.hpp  ClassRelations.hpp  FunctionRelations.hpp  GlobalRelations.hpp  Resolver.hpp  StatementNumerizer.hpp  SymbolTable.hpp  TypeChecker.hpp  TypeDefiner.hpp
include/frontend/Tokenizing/: Lexer.hpp  Tokens.hpp
include/frontend/Utils/: ClassMemberLookup.hpp  Overload.hpp
include/frontend/Visitors/: Interpreter.hpp  Printer.hpp  PrinterAST.hpp
src/: main.cpp
src/Parsing/: Interpreter.cpp  Parser.y  Printer.cpp  PrinterAST.cpp  SymbolTable.cpp
src/Tokenizing/: Lexer.l
src/backend/Lowering/: ExecutableLowering.cpp  ObjectFileLowering.cpp
src/frontend/: main.cpp
src/frontend/Debug/: Debug.cpp  DebugCtx.cpp  Errors.cpp
src/frontend/Lowering/: ExecutableLowering.cpp  LLVMConstructUtils.cpp  LLVMIRLowering.cpp  ObjectFileLowering.cpp
src/frontend/Parsing/: Parser.cpp  Parser.y  Types.cpp
src/frontend/SemanticAnalysis/: AccessAllowanceChecker.cpp  ClassRelations.cpp  FunctionRelations.cpp  GlobalRelations.cpp  Resolver.cpp  StatementNumerizer.cpp  SymbolTable.cpp  TypeChecker.cpp  TypeDefiner.cpp
src/frontend/Tokenizing/: Lexer.l
src/frontend/Utils/: ClassMemberLookup.cpp
src/frontend/Visitors/: Interpreter.cpp  Printer.cpp  PrinterAST.cpp
tests/: InterpreterTests.cpp  LoweringTests.cpp  ParserTreeTests.cpp  ResolverTests.cpp  SymbolTableTests.cpp  TestParseUtils.hpp  TypeCheckerTests.cpp
